/*
 *  FortiLedger360 Enterprise Security Suite
 *  ----------------------------------------
 *  Scanner Service – gRPC Service Implementation (Header)
 *
 *  Path : FortiLedger360/src/services/scanner_svc/service_impl.h
 *
 *  Description:
 *      Production-grade, thread-safe implementation of the Scanner gRPC
 *      service.  The implementation is responsible for orchestrating the
 *      full life-cycle of vulnerability scans:
 *
 *          • Request validation / multi-tenant RBAC enforcement
 *          • Strategy resolution (deep-scan, incremental-scan, etc.)
 *          • Dispatching asynchronous scan jobs onto the internal pool
 *          • Persisting & streaming scan progress through the Event-Bus
 *          • SLA-aware cancellation & timeout handling
 *
 *      The header purposefully exposes only the interface and guarantees.
 *      Concrete logic lives in service_impl.cpp.  All dependencies are
 *      injected via ctor to facilitate deterministic unit testing.
 *
 *  Copyright:
 *      © FortiLedger360. All rights reserved.
 *
 *  License:
 *      SPDX-License-Identifier: BUSL-1.1
 */

#pragma once

/* ────────────────────────────────────────────────────────────────────────── */
/* System headers                                                            */
#include <atomic>
#include <chrono>
#include <memory>
#include <mutex>
#include <shared_mutex>
#include <string>
#include <unordered_map>
#include <utility>

/* ────────────────────────────────────────────────────────────────────────── */
/* 3rd-party headers                                                         */
#include <grpcpp/grpcpp.h>

/* ────────────────────────────────────────────────────────────────────────── */
/* Project headers                                                           */
#include "common/diagnostics/logger.h"           // Structured logger façade
#include "common/diagnostics/metrics.h"          // Prometheus metrics helpers
#include "common/errors/error_codes.h"           // Uniform error handling
#include "domain/scanner/scan_strategy.h"        // Strategy Pattern
#include "domain/scanner/scan_repository.h"      // Persistence port
#include "infrastructure/bus/event_bus.h"        // Domain event bus
#include "proto/scanner.grpc.pb.h"               // Auto-generated by protoc

namespace fl360   {  // <─ Root namespace : FortiLedger360
namespace svc     {  // <─ Service layer
namespace scanner {

/* ────────────────────────────────────────────────────────────────────────── */
/* Forward declarations                                                      */
class ScanJobExecutor;    // Thread-pool executor for async scans

/* ────────────────────────────────────────────────────────────────────────── */
/* Type aliases                                                              */
using ScanId          = std::string;
using TenantId        = std::string;
using StrategyPtr     = std::unique_ptr<domain::scanner::IScanStrategy>;
using Clock           = std::chrono::steady_clock;
using TimePoint       = Clock::time_point;

/* ────────────────────────────────────────────────────────────────────────── */
/*!
 *  class ScannerServiceImpl
 *
 *  Final implementation of the gRPC service generated from
 *  proto/scanner.proto.  The class is completely stateless w.r.t gRPC
 *  context but delegates stateful work to its collaborators.
 */
class ScannerServiceImpl final : public proto::v1::ScannerService::Service
{
public:
    /*!
     *  Dependency-injecting constructor.
     *
     *  @param strategy_factory    Factory resolving the proper Scan-Strategy
     *  @param repository          Repository storing scan metadata & results
     *  @param event_bus           Domain Event-Bus for publishing progress
     *  @param executor            Lightweight thread-pool executing scans
     *  @param logger              Shared structured logger instance
     *  @param metrics             Metrics registry for Prometheus exports
     */
    ScannerServiceImpl(
        std::shared_ptr<domain::scanner::IScanStrategyFactory>   strategy_factory,
        std::shared_ptr<domain::scanner::IScanRepository>        repository,
        std::shared_ptr<infra::EventBus>                         event_bus,
        std::shared_ptr<ScanJobExecutor>                         executor,
        std::shared_ptr<diag::Logger>                            logger  = diag::Logger::Make("ScannerSvc"),
        std::shared_ptr<diag::MetricsRegistry>                   metrics = diag::MetricsRegistry::Default()
    );

    /* gRPC method overrides ─────────────────────────────────────────────── */

    ::grpc::Status StartScan(
        ::grpc::ServerContext*                           ctx,
        const proto::v1::StartScanRequest*               req,
        proto::v1::StartScanResponse*                    res
    ) override;

    ::grpc::Status GetScanStatus(
        ::grpc::ServerContext*                           ctx,
        const proto::v1::GetScanStatusRequest*           req,
        proto::v1::GetScanStatusResponse*                res
    ) override;

    ::grpc::Status CancelScan(
        ::grpc::ServerContext*                           ctx,
        const proto::v1::CancelScanRequest*              req,
        proto::v1::CancelScanResponse*                   res
    ) override;

    ::grpc::Status StreamScanProgress(
        ::grpc::ServerContext*                           ctx,
        const proto::v1::StreamScanProgressRequest*      req,
        ::grpc::ServerWriter<proto::v1::ScanProgress>*   writer
    ) override;

    /* Non-copyable ‑ we maintain internal ptrs & concurrency primitives */
    ScannerServiceImpl(const ScannerServiceImpl&)            = delete;
    ScannerServiceImpl& operator=(const ScannerServiceImpl&) = delete;

    /* Movable */
    ScannerServiceImpl(ScannerServiceImpl&&)            noexcept = default;
    ScannerServiceImpl& operator=(ScannerServiceImpl&&) noexcept = default;

    ~ScannerServiceImpl() override;

private:
    /* ─────────────────────── Helper structs & aliases ──────────────────── */

    struct ScanContext
    {
        TenantId            tenant;
        ScanId              id;
        TimePoint           started_at;
        std::atomic<bool>   cancelled { false };
    };

    using ScanContextPtr = std::shared_ptr<ScanContext>;

    /* ─────────────────────── Internal helper methods ───────────────────── */

    grpc::Status validateStartRequest(
        const proto::v1::StartScanRequest& request,
        std::string&                       out_error
    ) const;

    grpc::Status mapDomainErrorToGrpc(
        const domain::errors::ErrorCode&    code,
        const std::string&                  details
    ) const;

    void publishScanStarted   (const ScanContextPtr& scan);
    void publishScanCompleted (const ScanContextPtr& scan,
                               const domain::scanner::ScanResult& result);
    void publishScanCancelled (const ScanContextPtr& scan,
                               const std::string& reason);

    /* Registers a scan with the internal bookkeeping table */
    void trackActiveScan(const ScanContextPtr& ctx);

    /* Un-registers the scan, freeing memory */
    void untrackActiveScan(const ScanId& scan_id);

    /* Thread-safe lookup */
    ScanContextPtr findActiveScan(const ScanId& scan_id) const;

    /* ─────────────────────── Data members ──────────────────────────────── */

    std::shared_ptr<domain::scanner::IScanStrategyFactory>   m_strategy_factory;
    std::shared_ptr<domain::scanner::IScanRepository>        m_repository;
    std::shared_ptr<infra::EventBus>                         m_event_bus;
    std::shared_ptr<ScanJobExecutor>                         m_executor;
    std::shared_ptr<diag::Logger>                            m_log;
    std::shared_ptr<diag::MetricsRegistry>                   m_metrics;

    /* In-memory table of active scans (bounded) */
    mutable std::shared_mutex                                 m_mut_active;
    std::unordered_map<ScanId, ScanContextPtr>               m_active_scans;
};

/* ────────────────────────────────────────────────────────────────────────── */
}   // namespace scanner
}   // namespace svc
}   // namespace fl360
